--- a/css/modules.less
+++ b/css/modules.less
@@ -8,6 +8,10 @@
     height: @header-height;
     padding: @header-padding 20px;
     box-sizing: border-box;
+    .header-left {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
     .header-right {
         margin-left: -10px;
     }
